src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>AFSC__Replaced_Content_Document_Id__c</fullName>
        <label>Replaced Content Document Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__SHA1__c</fullName>
        <label>SHA1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Warning_MAC__c</fullName>
        <label>Warning MAC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Num__c</fullName>
        <label>Ad. Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Type__c</fullName>
        <label>Ad. Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>smart</fullName>
                </value>
                <value>
                    <fullName>AMG</fullName>
                </value>
                <value>
                    <fullName>StarElite</fullName>
                </value>
                <value>
                    <fullName>MBAFC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBU_PbP__c</fullName>
        <label>CBU/PbP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CBU</fullName>
                </value>
                <value>
                    <fullName>PbP</fullName>
                </value>
                <value>
                    <fullName>CBU&amp;PbP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <label>Car Model</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Class__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A160</fullName>
                </value>
                <value>
                    <fullName>A180</fullName>
                </value>
                <value>
                    <fullName>A 180 Hatchback</fullName>
                </value>
                <value>
                    <fullName>A 200 Hatchback</fullName>
                </value>
                <value>
                    <fullName>A 260 Hatchback</fullName>
                </value>
                <value>
                    <fullName>B200 Dynamic</fullName>
                </value>
                <value>
                    <fullName>B200</fullName>
                </value>
                <value>
                    <fullName>B200 BlueEFFICIENCY</fullName>
                </value>
                <value>
                    <fullName>B200 Avantgarde</fullName>
                </value>
                <value>
                    <fullName>B200 Luxury</fullName>
                </value>
                <value>
                    <fullName>B200 Luxury night special edition</fullName>
                </value>
                <value>
                    <fullName>C 200 Entry Elegance</fullName>
                </value>
                <value>
                    <fullName>C 280 Avantgarde</fullName>
                </value>
                <value>
                    <fullName>C230 Avantgarde</fullName>
                </value>
                <value>
                    <fullName>C200 CGI Avantgarde</fullName>
                </value>
                <value>
                    <fullName>C200 CGI Elegance</fullName>
                </value>
                <value>
                    <fullName>C280 Avantgarde</fullName>
                </value>
                <value>
                    <fullName>C200K Elegance</fullName>
                </value>
                <value>
                    <fullName>C200K Avantgarde</fullName>
                </value>
                <value>
                    <fullName>C200K Sport (not current series)</fullName>
                </value>
                <value>
                    <fullName>C260 Avantgarde</fullName>
                </value>
                <value>
                    <fullName>C200 Elegance</fullName>
                </value>
                <value>
                    <fullName>C240E Elegance (not current series)</fullName>
                </value>
                <value>
                    <fullName>C240A Avantgarde (not current series)</fullName>
                </value>
                <value>
                    <fullName>C230 Elegance</fullName>
                </value>
                <value>
                    <fullName>C280</fullName>
                </value>
                <value>
                    <fullName>C200K</fullName>
                </value>
                <value>
                    <fullName>C240 (not current series)</fullName>
                </value>
                <value>
                    <fullName>C230</fullName>
                </value>
                <value>
                    <fullName>C260 CGI Avantgarde (CKD)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Brand__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A-CLASS</fullName>
                </value>
                <value>
                    <fullName>B-CLASS</fullName>
                </value>
                <value>
                    <fullName>C-CLASS</fullName>
                </value>
                <value>
                    <fullName>C-Class Estate</fullName>
                </value>
                <value>
                    <fullName>C-Coupe</fullName>
                </value>
                <value>
                    <fullName>CL-CLASS</fullName>
                </value>
                <value>
                    <fullName>CLK-CLASS</fullName>
                </value>
                <value>
                    <fullName>CLS-CLASS</fullName>
                </value>
                <value>
                    <fullName>E-CLASS</fullName>
                </value>
                <value>
                    <fullName>E Coupe Sport</fullName>
                </value>
                <value>
                    <fullName>E-Class Cabriolet</fullName>
                </value>
                <value>
                    <fullName>G-CLASS</fullName>
                </value>
                <value>
                    <fullName>GL-CLASS</fullName>
                </value>
                <value>
                    <fullName>GLK-CLASS</fullName>
                </value>
                <value>
                    <fullName>ML-CLASS</fullName>
                </value>
                <value>
                    <fullName>R-CLASS</fullName>
                </value>
                <value>
                    <fullName>S-CLASS</fullName>
                </value>
                <value>
                    <fullName>SL-CLASS</fullName>
                </value>
                <value>
                    <fullName>SLK-CLASS</fullName>
                </value>
                <value>
                    <fullName>Concept Car</fullName>
                </value>
                <value>
                    <fullName>smart</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>G65 AMG</fullName>
                </value>
                <value>
                    <fullName>G63 AMG</fullName>
                </value>
                <value>
                    <fullName>E63 AMG</fullName>
                </value>
                <value>
                    <fullName>SLK55 AMG</fullName>
                </value>
                <value>
                    <fullName>C63 AMG</fullName>
                </value>
                <value>
                    <fullName>CLS63 AMG</fullName>
                </value>
                <value>
                    <fullName>G55 AMG</fullName>
                </value>
                <value>
                    <fullName>ML63 AMG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chart Gallery</fullName>
                </value>
                <value>
                    <fullName>Ad Template</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Audio</fullName>
                </value>
                <value>
                    <fullName>Electronic Print</fullName>
                </value>
                <value>
                    <fullName>POSM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Num__c</fullName>
        <label>Event Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Tool_Kit__c</fullName>
        <label>Event Tool Kit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outreach/Roadshow</fullName>
                </value>
                <value>
                    <fullName>Test drive</fullName>
                </value>
                <value>
                    <fullName>Local auto shows</fullName>
                </value>
                <value>
                    <fullName>Event/Festival marketing</fullName>
                </value>
                <value>
                    <fullName>New car market release</fullName>
                </value>
                <value>
                    <fullName>Co-branded activities</fullName>
                </value>
                <value>
                    <fullName>Exhibition activity</fullName>
                </value>
                <value>
                    <fullName>Sports marketing activities</fullName>
                </value>
                <value>
                    <fullName>Sponsorship/charity</fullName>
                </value>
                <value>
                    <fullName>Production of relevant</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MIGR_SOURCEID__c</fullName>
        <externalId>true</externalId>
        <label>MIGR SOURCEID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Digital media</fullName>
                </value>
                <value>
                    <fullName>Mobile phone</fullName>
                </value>
                <value>
                    <fullName>Newspapers</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <description>The Module of MBAuP Project</description>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                    <default>true</default>
                    <label>General</label>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Custom Portal</fullName>
                </value>
                <value>
                    <fullName>Dealer Portal</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_Date__c</fullName>
        <label>Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Market</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>After sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upload_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Upload Date</label>
        <type>DateTime</type>
    </fields>
    <recordTypes>
        <fullName>RecordType</fullName>
        <active>true</active>
        <label>Active Toolbox</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType1</fullName>
        <active>true</active>
        <label>Advertising Kit</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType2</fullName>
        <active>true</active>
        <label>Category marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType3</fullName>
        <active>true</active>
        <label>Aftermarket class</label>
    </recordTypes>
</CustomObject>